codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)              │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯
  Resuming session…

› draft while loading


after:

            ╭──  ╭─╮  ┌─╮  ┌──  ╷ ╷
            │    │ │  │ │  ├─    ╳
            ╰──  ╰─╯  └─╯  └──  ╵ ╵

                    loading
                    loading

    / commands      @ files      ? shortcuts



› draft while loading


---
fork lookup fallback:
before:
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)              │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯
  Forking session…

› draft while loading


after:

            ╭──  ╭─╮  ┌─╮  ┌──  ╷ ╷
            │    │ │  │ │  ├─    ╳
            ╰──  ╰─╯  └─╯  └──  ╵ ╵

                    loading
                    loading

    / commands      @ files      ? shortcuts



› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:

            ╭──  ╭─╮  ┌─╮  ┌──  ╷ ╷
            │    │ │  │ │  ├─    ╳
            ╰──  ╰─╯  └─╯  └──  ╵ ╵

                    loading
                    loading

    / commands      @ files      ? shortcuts



› Ask Codex to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:

            ╭──  ╭─╮  ┌─╮  ┌──  ╷ ╷
            │    │ │  │ │  ├─    ╳
            ╰──  ╰─╯  └─╯  └──  ╵ ╵

                    loading
                    loading

    / commands      @ files      ? shortcuts



› Ask Codex to do anything

  ? for shortcuts
